log/build_2025-08-16_15-21-53/ht_core/stderr.log
  File "/home/user/high_tide_ws/install/ht_core/lib/python3.10/site-packages/ht_core/state_machine.py", line 230
    self.node.offset_pub.publish(True))
                                      ^
SyntaxError: unmatched ')'

